--- a/aula09/03exercicio.html
+++ b/aula09/03exercicio.html
@@ -11,7 +11,10 @@
     <div>
         <form action="03exercicio.php" method="get">
 
-            
+            <h1>Preencha as notas:</h1>
+            Nota 1: <input type="number" step=".1" name="n1" id="in1"><br>
+            Nota 2: <input type="number" step=".1" name="n2" id="in2"><br>
+            <input type="submit" value="Calcular a média">
 
         </form>
     </div>
